# matagent-lab

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: ar_glasses.json  robotics_actuator.json
data/: literature_corpus.jsonl
docs/: GITHUB_PUBLISHING.md  MANUSCRIPT.md  PORTFOLIO_NOTES.md  RESEARCH_POSITIONING.md  SYSTEM_DESIGN.md
examples/: BaTiO3_dft.slurm  run_discovery.py  sample_ar_glasses_report.json  sample_robotics_benchmark.json
src/matagent_lab/: __init__.py  agents.py  benchmark.py  chemistry.py  cli.py  hpc.py  insights.py  models.py  orchestrator.py  rag.py  research_context.py  simulation_io.py  visualization.py
tests/: test_benchmark.py  test_chemistry.py  test_hpc.py  test_orchestrator.py  test_rag.py  test_research_context.py  test_simulation_io.py
workflows/: README.md  run_custom.py  run_dft.py  run_md.py  run_monte_carlo.py
