[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "matagent-lab"
version = "0.1.0"
description = "Agentic AI pipeline for materials and chemistry discovery demos."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "MatAgent Lab Contributors" }
]
keywords = [
  "agentic-ai",
  "materials-discovery",
  "chemistry",
  "rag",
  "hpc",
  "multi-agent-systems"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = []

[project.scripts]
matagent-lab = "matagent_lab.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
